# BenchNetRL

./: CLAUDE.md  env_utils.py  exp_utils.py  ppo.py  ppo_lstm.py  ppo_mamba.py  ppo_trxl.py  pyproject.toml
envs/: poc_memory_env.py
envs/finite_pomdp/: __init__.py  finite_pomdp.py  river_swim.py  tiger.py  verify_envs.py
envs/finite_pomdp/env_configs/: random_sparse_reward_0.json  random_sparse_reward_1.json  random_sparse_reward_2.json  random_sparse_reward_3.json  random_sparse_reward_4.json
scripts/ours/: finite_pomdp.sh  finite_pomdp_quick.sh
