[project]
name = "benchnetrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
     "gymnasium",
    "mamba-ssm",
    "minigrid>=3.0.0",
    "opencv-python-headless>=4.12.0.88",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch",
    "wandb",
]

