[project]
name = "benchnetrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py",
    "gymnasium",
    "mamba-ssm",
    "minigrid",
    "stable-baselines3",
    "tensorboard",
    "torch",
    "wandb",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["envs*", "plot_utils*", "envpool*", "carbs*"]
