[project]
name = "benchnetrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
    "gymnasium",
    "ale-py",
    "mamba-ssm",
    "minigrid",
    "stable-baselines3",
    "tensorboard",
    "wandb",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["envs*", "plot_utils*", "envpool*", "carbs*"]
